--- a/style.css
+++ b/style.css
@@ -1,23 +1,44 @@
-body {
-    font-family: 'VT323';
-    font-size: 48px;
+*, *::before, *::after{
+    box-sizing: border-box;
+    font-family: VT323;
+    font-size: 24px;
 }
 
-.avatar {grid-area: avatar;}
-.key {grid-area: key;}
-.score {grid-area: score;}
-.character-name {grid-area: character-name;}
-.output {grid-area: output;}
-.input-1 {grid-area: input-1;}
-.input-2 {grid-area: input-2;}
-.input-3 {grid-area: input-3;}
-.input-4 {grid-area: input-4;}
+body {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    background-color: #222;
+}
 
-.grid-container {
+.container {
+    width: 800px;
+    max-width: 80%;
+    background-color: white;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px 2px;
+}
+
+.btn-grid {
     display: grid;
-    grid-template-areas: 'avatar key key score'
-    'avatar output output output'
-    'character-name output output output'
-    'input-1 input-1 input-2 input-2'
-    'input-3 input-3 input-4 input-4';    
+    grid-template-columns: repeat(2, auto);
+    gap: 10px;
+    margin-top: 20px;
+}
+
+.btn {
+    background-color: hsl(200, 100%, 50%);
+    border: 1px solid hsl(200, 100%, 30%);
+    border-radius: 5px;
+    padding: 5px 10px;
+    outline: none;
+}
+
+.btn:hover {
+    border-color: black;
 }
