--- a/style.css
+++ b/style.css
@@ -31,6 +31,13 @@ body {
     margin-top: 20px;
 }
 
+.output-grid {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    gap: 10px;
+    margin-top: 20px;
+}
+
 .btn {
     background-color: hsl(200, 100%, 50%);
     border: 1px solid hsl(200, 100%, 30%);
@@ -41,4 +48,9 @@ body {
 
 .btn:hover {
     border-color: black;
+}
+
+img {
+    width: 150px;
+    height: 150px;
 }
